src/snapshots/rnix_analyzer__scope__tests__scope_lambda_simple.snap
---
source: src/scope.rs
expression: scopes.0
---
[
    Scope {
        kind: Lambda,
        defines: {
            "a": Definition {
                id: 0,
                name: "a",
                text_range: [0; 1),
            },
        },
        text_range: [0; 11),
    },
    Scope {
        kind: Lambda,
        defines: {
            "b": Definition {
                id: 1,
                name: "b",
                text_range: [3; 4),
            },
        },
        text_range: [3; 11),
    },
]
