src/snapshots/rnix_analyzer__scope__tests__scope_let_in_error_inherit_already_defined.snap
---
source: src/scope.rs
expression: scopes.1
---
[
    AlreadyDefined(
        LetIn,
        "builtins",
        [26; 34),
        [4; 12),
    ),
]
