src/snapshots/rnix_analyzer__scope__tests__scope_let_in_error_nested_parent_already_defined.snap
---
source: src/scope.rs
expression: scopes.1
---
[
    AlreadyDefined(
        LetIn,
        "a.b.c",
        [13; 18),
        [4; 7),
    ),
]
