src/snapshots/rnix_analyzer__scope__tests__scope_let_in_incremental_nested_building.snap
---
source: src/scope.rs
expression: scopes.0
---
[
    Scope {
        kind: LetIn,
        defines: {
            "a": Definition {
                id: 0,
                name: "a",
                text_range: [4; 5),
            },
        },
        text_range: [0; 41),
    },
    Scope {
        kind: AttrSet,
        defines: {},
        text_range: [8; 10),
    },
    Scope {
        kind: AttrSet,
        defines: {},
        text_range: [29; 31),
    },
]
